bk_ida/gccida/c2/expand_builtin_init_dwarf_reg_sizes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_init_dwarf_reg_sizes/src/dwarf2out.c:903:30: error: use of undeclared identifier 'machine_mode'
v9 = adjust_address_1( v4, ( machine_mode)v1, ( unsigned int)v7, 1, 1); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_builtin_init_dwarf_reg_sizes/src/obj/dwarf2out.o] Error 1
